--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://git.oschina.net/qinshenxue/tpl"
   },
-  "main":"",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +17,12 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "ftp": "^0.3.10",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.2",
+    "gulp-jshint": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
-    "gulp-clean-css": "^2.0.2",
-    "ftp":"^0.3.10"
+    "jshint": "^2.9.2"
   }
 }
